test/libsolidity/syntaxTests/constructor/library_constructor.sol
library Lib {
	constructor() public;
}
// ----
// TypeError 7634: (15-36): Constructor cannot be defined in libraries.
// TypeError 5700: (15-36): Constructor must be implemented if declared.
